--- a/html/home.html
+++ b/html/home.html
@@ -17,15 +17,11 @@
 </head>
 <body>
     <header>
-        <div class="style-main-body">
-            <div class="main-nav">
-                <nav class="main-nav">
-                    <a href="../html/projects/project-page.html">PROJECTS</a>
-                    <a href="../html/home.html">ABOUT ME</a>
-                    <a href="../html/contact.html">CONTACT</a>
-                </nav>
-            </div>
-        </div>
+        <nav class="main-nav">
+            <a href="../html/projects/project-page.html">PROJECTS</a>
+            <a href="../html/home.html">ABOUT ME</a>
+            <a href="../html/contact.html">CONTACT</a>
+        </nav>
     </header>
     <section id="home">
         <div class="style-container">
@@ -45,6 +41,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
+            <a href="../index.html">Style Guide</a>
         </div>
     </footer>
 </body>
