--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Pavilion In A Park</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -17,15 +17,11 @@
 </head>
 <body>
     <header>
-        <div class="style-main-body">
-            <div class="main-nav">
-                <nav class="main-nav">
-                    <a href="../../html/projects/project-page.html">PROJECTS</a>
-                    <a href="../../html/home.html">ABOUT ME</a>
-                    <a href="../../html/contact.html">CONTACT</a>
-                </nav>
-            </div>
-        </div>
+        <nav class="main-nav">
+            <a href="../../html/projects/project-page.html">PROJECTS</a>
+            <a href="../../html/home.html">ABOUT ME</a>
+            <a href="../../html/contact.html">CONTACT</a>
+        </nav>
     </header>
 
     <div class="banner-block">
@@ -55,7 +51,7 @@
     </div>
     <div class="style-container">
         <div class="center">
-            <a href="../projects/pavilion.html"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+            <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
         <div class="bottom-border"></div>
         </div>
     </div>
@@ -71,7 +67,7 @@
         </div>
         <div class="style-container">
             <div class="center">
-                <a href="../projects/pavilion.html"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
             <div class="bottom-border-white"></div>
             </div>
         </div>
@@ -85,9 +81,7 @@
     </div>
     <div class="style-container">
         <div class="center">
-            <video controls>
-                <source src="../../images/pav-vid.mp4" type=video/mp4>
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="bottom-border"></div>
         </div>
     </div>
@@ -138,6 +132,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
+            <a href="../../index.html">Style Guide</a>
         </div>
     </footer>
 </body>
