--- a/html/projects/project-page.html
+++ b/html/projects/project-page.html
@@ -17,15 +17,11 @@
 </head>
 <body>
     <header>
-        <div class="style-main-body">
-            <div class="main-nav">
-                <nav class="main-nav">
-                    <a href="../../html/projects/project-page.html">PROJECTS</a>
-                    <a href="../../html/home.html">ABOUT ME</a>
-                    <a href="../../html/contact.html">CONTACT</a>
-                </nav>
-            </div>
-        </div>
+        <nav class="main-nav">
+            <a href="../../html/projects/project-page.html">PROJECTS</a>
+            <a href="../../html/home.html">ABOUT ME</a>
+            <a href="../../html/contact.html">CONTACT</a>
+        </nav>
     </header>
 
     <div class="banner-block">
@@ -46,14 +42,14 @@
             <h3>Sept - Dec 2022</h3>
         </div>
         <div class="style-element">
-            <a href="#"><img src="../../images/336.png" alt="random image that acts as a link"></a>
+            <a href="../projects/goggle.html"><img src="../../images/336.png" alt="random image that acts as a link"></a>
         </div>
     </div>
 
     <div class="banner-block">
         <div class="style-container">
             <div class="style-element">
-                <a href="#"><img src="../../images/233.png" alt="random image that acts as a link"></a>
+                <a href="../projects/chair.html"><img src="../../images/233.png" alt="random image that acts as a link"></a>
             </div>
             <div class="style-element">
                 <h2>This Chair Is Not A Chair - Product Design</h2>
@@ -67,6 +63,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
+            <a href="../../index.html">Style Guide</a>
         </div>
     </footer>
 </body>
