--- a/index.html
+++ b/index.html
@@ -14,31 +14,13 @@
 <body>
 
     <header>
-        <!-- <div class="nav-bar">
-            <a href="#">Calvin Lin</a>
+        <nav class="main-nav">
             <a href="#general-elements">General Elements</a>
             <a href="#interactive-elements">Interactive Elements</a>
             <a href="#text-elements">Text Elements</a>
             <a href="#combined-elements">Combined Elements</a>
-        </div> -->
-        <section class="p-menu1">
-            <nav id="navbar" class="navigation" role="navigation">
-              <input id="toggle1" type="checkbox" />
-              <label class="hamburger1" for="toggle1">
-                <div class="top"></div>
-                <div class="meat"></div>
-                <div class="bottom"></div>
-              </label>
-            
-              <nav class="menu1">
-                <a class="link1" href="#">Calvin Lin</a>
-                <a class="link1" href="#general-elements">General Elements</a>
-                <a class="link1" href="#interactive-elements">Interactive Elements</a>
-                <a class="link1" href="#text-elements">Text Elements</a>
-                <a class="link1" href="#combined-elements">Combined Elements</a>
-              </nav>
-          </nav>
-          </section>
+            <a href="/html/home.html">Website</a>
+        </nav>
     </header>
     <div class="style-main-body">
         <div class="banner">
@@ -60,6 +42,8 @@
                     <p>Lavender Gray Accent Colour - RGB (185,185,205)</p>
                     <div class="color-box" style="background-color: var(--blurple-accent);"></div>
                     <p>Blurple (Blue Purple) Accent Colour - RGB (128,149,255)</p>
+                    <div class="color-box" style="background-color: var(--gray-accent);"></div>
+                    <p>Gray Accent Colour - RGB (112,128,144);</p>
                 </div>
             </div>
         </section>
@@ -155,7 +139,7 @@
                     </div>
                     <div class="style-element">
                             <h4>Rendered Element</h4>
-                            <a href="#"><img src="#" alt="random image that acts as a link"></a>
+                            <a href="#"><img src="images/233.png" alt="random image that acts as a link"></a>
                         </div>
                     </div>
                 </div>
@@ -292,8 +276,13 @@
                 <div class="style-element">
                 <h2>Citations and Sources</h2>
                     <ul>    
+                        <li>Comfortaa from Google Fonts. Retrieved from <a href="https://fonts.google.com/specimen/Comfortaa">URL</a></li>
+                        <li>Fredoka One from Google Fonts. Retrieved from <a href="https://fonts.google.com/specimen/Fredoka+One">URL</a></li>
                         <li>Gelato Luxe font from Adobe Fonts. Retrieved from <a href="https://fonts.adobe.com/fonts/gelato-luxe">URL</a></li>
-                        <li>.....And other things learned from lecture/labs</li>
+                        <li>Bootstrap Carousel. W3Schools. <a href="https://www.w3schools.com/bootstrap/bootstrap_carousel.asp">URL</a></li>
+                        <li>Image Size How To Fill But Not Stretch. stackoverflow. <a href="https://stackoverflow.com/questions/11757537/css-image-size-how-to-fill-but-not-stretch">URL</a>
+                        <li>How To Insert Video In HTML. W3Schools. <a href="https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html ">URL</a>
+                        <li>.....And other things learned from lecture/labs/projects</li>
                     </ul>
                 </div>
             </div>
@@ -310,4 +299,4 @@
 
 <!-- citations -->
 <!-- https://stackoverflow.com/questions/11757537/css-image-size-how-to-fill-but-not-stretch -->
-<!-- https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html --> 
+<!-- https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html  -->
