--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -16,38 +16,75 @@
     <link rel="stylesheet" href="../../css/hamburger.css">
 </head>
 <body>
-    <header>
-        <div class="style-main-body">
-            <div class="main-nav">
-                <nav class="main-nav">
-                    <a href="../../html/projects/project-page.html">PROJECTS</a>
-                    <a href="../../html/home.html">ABOUT ME</a>
-                    <a href="../../html/contact.html">CONTACT</a>
-                </nav>
-            </div>
-        </div>
-    </header>
+  <header>
+    <nav class="main-nav">
+        <a href="../../html/projects/project-page.html">PROJECTS</a>
+        <a href="../../html/home.html">ABOUT ME</a>
+        <a href="../../html/contact.html">CONTACT</a>
+    </nav>
+</header>
 
     <div class="banner-block">
         <div class="style-container">
-            <div class="style-element" >
-
-            </div>        
+          <div class="center" >
+            <h2>This Chair Is Not A Chair</h2>
+            <div class="bottom-border-white"></div>
+            <h3>Project Overview</h3>
+            <p>
+              This Chair is Not a Chair is a design project that challenges the idea of what a chair can be. This project blurs the line between a chair and a beautiful work of art. This project had a size limitation of 50 cm³. With no other limitations, I was able to be as creative as possible. This project tested my abilities to conceptualize, sketch, and apply my innovative skill through a 3D model. </p>
+            <div class="bottom-border-white"></div>
+        </div>       
         </div>
     </div>
 
     <div class="style-container">
-        <div class="style-element">
-
-        </div>
+      <div class="center">
+          <h3>Design Process</h3>
+          <div class="bottom-border-white"></div>
+          <p>This Chair is Not a Chair is a school project that required me to think outside the box by creating a chair that can be seen as both art and function. While brainstorming for what would make an interesting chair and sculpture, I made sure to not distance myself from the traditional four-legged chair or any of its variations. I looked at the natural world around me, taking inspiration from objects and animals. 
+            Eventually, I designed a version of the chair that would guide the project in a newfound direction. The design takes inspiration from a snake head, with the contour of the skull as the seat of the chair. The tongue of the snake provides additional support for the chair to prevent collapsing. I had ideas of designing the mouth of the snake as the seat but found that the natural contour of the skull helped me convey both the shape of a chair, as well as the shape of a snake.</p>
+          <br>
+          <p>The final design of my chair takes inspiration from a snake's head. Using the head of the snake to signify a chair, it was important for me to convey both the context of a chair and an art piece. After completing the sketches and laying out the foundation of my design, I took my design into Rhinoceros3D where I transformed my sketch into a 3D model.   </p>
+      </div>
+    </div>
+    <div class="style-container">
+      <div class="center">
+          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+      <div class="bottom-border"></div>
+      </div>
     </div>
 
     <div class="banner-block">
-        <div class="style-container">
-            <div class="style-element">
+      <div class="style-container">
+        <div class="center" >
+          <h3>Challenges</h3>
+          <p>
+            While designing the chair, it was crucial to remember that the final product will be assembled as a slotted cardboard model, rather than a smooth 3D print. This was a challenge because it meant that we could not include fine details, as they would fall off from our model. 
+Another challenge was how we needed to convey both the fact that the model is a chair and a piece of art, as the two ideas are contradictory. Art is typically not meant to be touched, and a chair is an item that is touched for the entirety of its lifespan. We needed to bridge these two ideas together, creating a cohesive model that has the affordances of a chair.  </p>
+      </div>       
+      </div>
 
-            </div>
+      <div class="style-container">
+        <div class="center">
+            <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+        <div class="bottom-border-white"></div>
         </div>
+      </div>
+    </div>
+    
+
+    <div class="style-container">
+      <div class="center">
+          <h3>Reflection</h3>
+          <div class="bottom-border-white"></div>
+          <p>This Chair is Not a Chair was a challenging project that required ingenuity to design something both artistic, as well as functional. Because the final assembly of the project was slotted, there was a lot of thought put into the overall shape of the head, ensuring that it was still identifiable in the end. I am especially proud of the fact that, due to the large features of the design, it is very structurally sound. </p>
+      </div>
+    </div>
+    <div class="style-container">
+      <div class="center">
+          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+      <div class="bottom-border"></div>
+      </div>
     </div>
 
     <div class="style-container">
@@ -89,13 +126,14 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-    </div>
+      </div>
 
     <footer>
         <div class="footer-flex-item">
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
+            <a href="../../index.html">Style Guide</a>
         </div>
     </footer>
 </body>
