--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -49,7 +49,7 @@
     </div>
     <div class="style-container">
       <div class="center">
-          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+          <a href="../../images/chair-ideation.png" target="_blank"><img src="../../images/chair-ideation.png" alt="random image that acts as a link"></a>
       <div class="bottom-border"></div>
       </div>
     </div>
@@ -66,7 +66,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
 
       <div class="style-container">
         <div class="center">
-            <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+            <a href="../../images/chair-ideation1.png" target="_blank"><img src="../../images/chair-ideation1.png" alt="random image that acts as a link"></a>
         <div class="bottom-border-white"></div>
         </div>
       </div>
@@ -82,7 +82,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
     </div>
     <div class="style-container">
       <div class="center">
-          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+          <a href="../../images/233.png" target="_blank"><img src="../../images/233.png" alt="random image that acts as a link"></a>
       <div class="bottom-border"></div>
       </div>
     </div>
