--- a/html/projects/goggle.html
+++ b/html/projects/goggle.html
@@ -33,6 +33,7 @@
               <p>
                 VR Goggles for Seasonal Depression are virtual reality goggles that I designed for a school project. The end-user of the goggles are those who suffer from seasonal depression and are unable to participate in the activities that they most enjoy. I thought about how I could capture the feeling of being outdoors and around nature with VR goggles. 
                 Material constraints were assigned to every group and I was assigned wood and fabric. By working under material constraints, I was able to narrow my research to wood and fabric and understand their strengths and weaknesses. Material restrictions also influence the appearance of the final product, as veneered wood does not need to be treated. </p>
+                <a href="../../images/me-working.jpg" target="_blank"><img src="../../images/me-working.jpg" alt="random image that acts as a link"></a>
               <div class="bottom-border-white"></div>
             </div>        
         </div>
@@ -43,7 +44,7 @@
           <h3>Ideation Phase</h3>
           <p>During the ideation phase, two things were certain: I was only permitted to work with wood and fabric, and I had an end-user persona in mind. The end-user was somebody who was suffering from seasonal depression. Using VR as a means of escape, the appearance of the goggles should reflect the purpose. My goal was to design a pair of goggles that took inspiration from nature. I designed a pair of goggles that resembled traditional VR goggles (left) with etching to fit the end user. I wanted to explore more interesting finishes, manipulating fabric to resemble rocks and leaves as shown in the middle sketch. The final sketch (right) deviates heavily from a common VR headset, resembling more of a helmet than a headset. I wanted to explore different ranges between my artistic creativity to see which idea would work best in person.  
             I settled on a simplistic design with accented decals to provide a sense of artistic vision, without being overwhelming and distracting. I took inspiration from many outdoor activities like adjustable straps from a pair of snow goggles, as well as the owl-inspired front plate against the navy blue fabric, to emulate the night. </p>
-          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+          <a href="../../images/sketch-1.png" target="_blank"><img src="../../images/sketch-1.png" alt="random image that acts as a link"></a>
           <div class="bottom-border"></div>
         </div>
     </div>
@@ -53,7 +54,7 @@
           <div class="center">
             <h3>First Model</h3>
             <p>During the construction of the first model, I used styrene and cardboard to form the shape and structure of the goggles. Using foresight, I realized that there were issues with this initial model. The first issue I address was that the technology I was working with did not allow me to steam bend the wood. The second issue is that I had no way to create a pivot point on the front plate, this was solved by removing the bend and opting for a flat plate instead.</p>
-            <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+            <a href="../../images/goggle2.jpg" target="_blank"><img src="../../images/goggle2.jpg" alt="random image that acts as a link"></a>
             <div class="bottom-border-white"></div>
           </div>
         </div>
@@ -64,7 +65,7 @@
         <h3>Challenges</h3>
         <p>As I was designing the VR goggles, there was one pressing issue: ergonomics. I spent countless iterations revising the comfort of the headset. It was crucial that I did not design in excess as I was assigned to work with wood and fabric. The first challenge with wood is that it can be heavy and strain the user's neck. I wanted to find ways to create a sturdy frame for the goggles, while not compromising on aesthetics and overall function. 
           Another challenge was designing strong connecting joints. Joints that were designed too thin would snap, and joints that were too thick will bring us back to square one by adding excess weight. My solution was to brace thin joins against the main frame to relieve stresses and provide structure and security. </p>
-        <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+        <!-- <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a> -->
         <div class="bottom-border"></div>
       </div>
     </div>
@@ -74,7 +75,7 @@
         <div class="center">
           <h3>Reflection</h3>
           <p>The Seasonal Depression VR goggles was my first experience designing a functional product. This was a stressful project with many factors to consider, the human form, weight, aesthetics, and function. I learned to problem solve and think outside of the box by creating a skeleton structure for the frame, significantly reducing the overall weight. Because the pieces were flush and fitted, the skeleton structure did not require any glue or adhesives to join. I am really proud that I was able to come up with such a solution like a skeleton, it is one of my proudest accomplishments of ingenuity and creative thinking. </p>
-          <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+          <a href="../../images/336.png" target="_blank"><img src="../../images/336.png" alt="random image that acts as a link"></a>
           <div class="bottom-border-white"></div>
         </div>
       </div>
@@ -120,7 +121,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-    </div>
+      </div>
 
     <footer>
         <div class="footer-flex-item">
