pavilion challenge image changed

--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -67,7 +67,7 @@
         </div>
         <div class="style-container">
             <div class="center">
-                <a href="../../images/pergola-ideate.png" target="_blank"><img src="../../images/pergola-ideate.png" alt="random image that acts as a link"></a>
+                <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
             <div class="bottom-border-white"></div>
             </div>
         </div>
