link style guide to page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#interactive-elements">Interactive Elements</a>
             <a href="#text-elements">Text Elements</a>
             <a href="#combined-elements">Combined Elements</a>
-            <a href="/html/home.html">Website</a>
+            <a href="html/home.html">Website</a>
         </nav>
     </header>
     <div class="style-main-body">
