--- a/html/home.html
+++ b/html/home.html
@@ -41,7 +41,7 @@
             <h3>Contact Me</h3>
             <p>778-000-1234</p>
             <p>calvinlin@gmail.com</p>
-            <a href="../index.html">Style Guide</a>
+            <a href="/index.html">Style Guide</a>
         </div>
     </footer>
 </body>
