--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -81,7 +81,7 @@
     </div>
     <div class="style-container">
         <div class="center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="bottom-border"></div>
         </div>
     </div>
