team and tools added

--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -29,6 +29,18 @@
           <div class="center" >
             <h2>This Chair Is Not A Chair</h2>
             <div class="bottom-border-white"></div>
+            <h3>Team</h3>
+                <div class="bottom-border-white"></div>
+                <br>
+                    <p>Calvin Lin - Designer and 3D Modeler</p><br>
+                    <p>Alfred - Product Assemble and Grasshopper</p>
+            <h3>Tools</h3>
+                <div class="bottom-border-white"></div>
+                    <br>
+                    <p>ProCreate</p><br>
+                    <p>Rhinoceros3D</p><br>
+                    <p>Grasshopper</p>
+                <div class="bottom-border-white"></div>
             <h3>Project Overview</h3>
             <p>
               This Chair is Not a Chair is a design project that challenges the idea of what a chair can be. This project blurs the line between a chair and a beautiful work of art. This project had a size limitation of 50 cm³. With no other limitations, I was able to be as creative as possible. This project tested my abilities to conceptualize, sketch, and apply my innovative skill through a 3D model. </p>
