--- a/html/projects/goggle.html
+++ b/html/projects/goggle.html
@@ -29,6 +29,19 @@
             <div class="center">
               <h2>VR Goggles</h2>
               <div class="bottom-border-white"></div>
+              <h3>Team</h3>
+                  <div class="bottom-border-white"></div>
+                  <br>
+                      <p>Calvin Lin - Designer and Assembly</p><br>
+                      <p>Mitchell - Material Designer and Assembly</p><br>
+                      <p>Summr - Concept Designer</p><br>
+                      <p>Sorren - Project Manager</p>
+              <h3>Tools</h3>
+                  <div class="bottom-border-white"></div>
+                      <br>
+                      <p>ProCreate</p><br>
+                      <p>Ilustrator</p>
+                  <div class="bottom-border-white"></div>
               <h3>Project Overview</h3>
               <p>
                 VR Goggles for Seasonal Depression are virtual reality goggles that I designed for a school project. The end-user of the goggles are those who suffer from seasonal depression and are unable to participate in the activities that they most enjoy. I thought about how I could capture the feeling of being outdoors and around nature with VR goggles. 
