--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -29,6 +29,21 @@
             <div class="center" >
                 <h2>Pavilion In A Park</h2>
                 <div class="bottom-border-white"></div>
+                <h3>Team</h3>
+                    <div class="bottom-border-white"></div>
+                    <br>
+                        <p>Calvin Lin - Environmental Modeling using TwinMotion and Designer</p><br>
+                        <p>Micole - 3D modeling using Rhinoceros3D and Grasshopper</p><br>
+                        <p>Ricky - 3D modeling using Rhinoceros3D and Grasshopper</p><br>
+                        <p>Rochelle - Project Manager</p>
+                <h3>Tools</h3>
+                    <div class="bottom-border-white"></div>
+                        <br>
+                        <p>ProCreate</p><br>
+                        <p>Rhinoceros3D</p><br>
+                        <p>Grasshopper</p><br>
+                        <p>TwinMotion</p>
+                    <div class="bottom-border-white"></div>
                 <h3>Project Overview</h3>
                 <p>
                     Pavillion In a Park is a school project where I was tasked to design a pavilion and pergola within the boundaries of Holland Park in Surrey, British Columbia. I was given the option to create a pavilion for either the purpose of music recitals, religious practices, or celebratory purposes. I decided to design the pavilion for hosting music recitals, specifically the piano.  
