--- a/html/home.html
+++ b/html/home.html
@@ -29,8 +29,8 @@
                 <img src="../images/me.png" alt="random image that acts as a link">
             </div>
             <div class="style-element">
-                <h3>Hello!</h3>
-                <p class="shortened">My name is Calvin and I'm a product designer. I love using visuals and prototypes to communicate ideas, and I believe that physical products are a universal language that everybody can understand. Growing up, I was always interested in assembling model cars and working with electronic components. I want to use my passion for designing products to better enrich the lives of those around me and create an impact in the global community. 
+                <h3>Hello! My name is Calvin Lin and I am a Product Designer</h3>
+                <p class="shortened">I love using visuals and prototypes to communicate ideas, and I believe that physical products are a universal language that everybody can understand. Growing up, I was always interested in assembling model cars and working with electronic components. I want to use my passion for designing products to better enrich the lives of those around me and create an impact in the global community. 
                     At the moment, I am pursuing my undergraduate degree in Interactive Arts and Technology at Simon Fraser University with a concentration in design. However, at the moment, you can find me skiing on Cypress Mountain or finding new dessert spots in the lower mainland. </p>
                 <a class="button" href="../html/projects/project-page.html">Check out my projects!</a>
             </div>
