youtube video centered

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
                         <li>Bootstrap Carousel. W3Schools. <a href="https://www.w3schools.com/bootstrap/bootstrap_carousel.asp">URL</a></li>
                         <li>Image Size How To Fill But Not Stretch. stackoverflow. <a href="https://stackoverflow.com/questions/11757537/css-image-size-how-to-fill-but-not-stretch">URL</a>
                         <li>How To Insert Video In HTML. W3Schools. <a href="https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html ">URL</a>
+                        <li>How To Make Youtube Videos Responsive. Yoast. <a href="https://yoast.com/how-to-make-youtube-videos-responsive/">URL</a></li>
                         <li>.....And other things learned from lecture/labs/projects</li>
                     </ul>
                 </div>
