--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -96,8 +96,10 @@
     </div>
     <div class="style-container">
         <div class="center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="bottom-border"></div>
+            <centre>
+               <iframe class="youtube-video" width="560" height="315" src="https://www.youtube.com/embed/G-dzls0VD2k" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </centre>
+        <div class="bottom-border"></div>
         </div>
     </div>
 
