--- a/html/projects/project-page.html
+++ b/html/projects/project-page.html
@@ -26,10 +26,8 @@
 
     <div class="banner-block">
         <div class="style-container">
-            <div class="style-element" >
+            <div class="center" >
                 <a href="../projects/pavilion.html"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
-            </div>        
-            <div class="style-element">
                 <h2>Pavilion In A Park - Architechtural Design</h2>
                 <h3>Mar - Apr 2022</h3>
             </div>
@@ -37,21 +35,17 @@
     </div>
 
     <div class="style-container">
-        <div class="style-element">
+        <div class="center">
+            <a href="../projects/goggle.html"><img src="../../images/336.png" alt="random image that acts as a link"></a>
             <h2>VR Goggles for Seasonal Depression - Industrial Design</h2>
             <h3>Sept - Dec 2022</h3>
-        </div>
-        <div class="style-element">
-            <a href="../projects/goggle.html"><img src="../../images/336.png" alt="random image that acts as a link"></a>
         </div>
     </div>
 
     <div class="banner-block">
         <div class="style-container">
-            <div class="style-element">
+            <div class="center">
                 <a href="../projects/chair.html"><img src="../../images/233.png" alt="random image that acts as a link"></a>
-            </div>
-            <div class="style-element">
                 <h2>This Chair Is Not A Chair - Product Design</h2>
                 <h3>Jan - Feb 2022</h3>
             </div>
