--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/flex.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/hamburger.css">
+    <link rel="stylesheet" href="css/animations.css"
 </head>
 <body>
 
@@ -283,6 +284,7 @@
                         <li>Image Size How To Fill But Not Stretch. stackoverflow. <a href="https://stackoverflow.com/questions/11757537/css-image-size-how-to-fill-but-not-stretch">URL</a>
                         <li>How To Insert Video In HTML. W3Schools. <a href="https://www.w3docs.com/snippets/html/how-to-insert-video-in-html.html ">URL</a>
                         <li>How To Make Youtube Videos Responsive. Yoast. <a href="https://yoast.com/how-to-make-youtube-videos-responsive/">URL</a></li>
+                        <li>How To Transition CSS Display + Opacity Properties. stackoverflow. <a href="https://stackoverflow.com/questions/8449933/how-to-transition-css-display-opacity-properties">URL</a></li>
                         <li>.....And other things learned from lecture/labs/projects</li>
                     </ul>
                 </div>
