--- a/html/contact.html
+++ b/html/contact.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/flex.css">
     <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="stylesheet" href="../css/hamburger.css">
+    <link rel="stylesheet" href="../css/animations.css">
 </head>
 <body>
     <header>
@@ -23,18 +24,15 @@
             <a href="../html/contact.html">CONTACT</a>
         </nav>
     </header>
-    
+    <section id="contact">
     <div class="banner-block">
-        <div class="style-container">
+        <!-- <div class="style-container">
             <div class="center">
                 <h3>Get in touch with me!</h3>
                 <h4>Email: <a href="#">cla455@sfu.ca</a></h4>
                 <h4>Mobile: <a href="#">778-000-1234</a></h4>
-                <form target="_blank" method="get" action="../images/336-thumbnail.jpg">
-                  <button class="button-submit" type="submit">Check out my resume</button>
-               </form>
             </div>
-          </div>
+          </div> -->
         <div class="style-container">
           <div class="center">
             <h3>Leave me a message!</h3>
@@ -46,7 +44,10 @@
             <textarea id="message"></textarea><br><br>
             <input type="submit" class="button-submit">
             <h4>Thank you for the message!</h4>
-            <h4>I will get back to you as soon as possible!</h4>
+            <h4>I will get back to you as soon as possible!</h4>                
+            <form target="_blank" method="get" action="../images/336-thumbnail.jpg">
+                  <button class="button-submit" type="submit">Check out my resume</button>
+               </form>
           </div>
         </div>
       </div>
@@ -91,7 +92,7 @@
             </a>
           </div>
     </div>
-    
+  </section>
     <footer>
         <div class="footer-flex-item">
             <h3>Contact Me</h3>
