--- a/html/projects/goggle.html
+++ b/html/projects/goggle.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../css/flex.css">
     <link rel="stylesheet" href="../../css/stylesheet.css">
     <link rel="stylesheet" href="../../css/hamburger.css">
+    <link rel="stylesheet" href="../../css/animations.css">
 </head>
 <body>
   <header>
