--- a/html/projects/project-page.html
+++ b/html/projects/project-page.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../css/animations.css">
 </head>
 <body>
+
     <header>
         <nav class="main-nav">
             <a href="../../html/projects/project-page.html">PROJECTS</a>
@@ -24,7 +25,7 @@
             <a href="../../html/contact.html">CONTACT</a>
         </nav>
     </header>
-
+    <section class="project">
     <div class="banner-block">
         <div class="style-container">
             <div class="center" >
@@ -52,7 +53,7 @@
             </div>
         </div>
     </div>
-
+    </section>
     <footer>
         <div class="footer-flex-item">
             <h3>Contact Me</h3>
