--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="css/flex.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/hamburger.css">
-    <link rel="stylesheet" href="css/animations.css"
+    <link rel="stylesheet" href="css/animations.css">
 </head>
 <body>
-
+<section class="guide">
     <header>
         <nav class="main-nav">
             <a href="#general-elements">General Elements</a>
@@ -271,6 +271,7 @@
             </div>
         </div>
         </section>
+</section>
 
         <section id="citations">
             <div class="style-container">
