--- a/html/home.html
+++ b/html/home.html
@@ -28,16 +28,42 @@
         <div class="style-container">
             <div class="center">
                 <h3>Hello! My name is Calvin Lin and I am a Product Designer</h3>
-                <p>I love using visuals and prototypes to communicate ideas, and I believe that physical products are a universal language that everybody can understand. Growing up, I was always interested in assembling model cars and working with electronic components. I want to use my passion for designing products to better enrich the lives of those around me and create an impact in the global community. 
-                    At the moment, I am pursuing my undergraduate degree in Interactive Arts and Technology at Simon Fraser University with a concentration in design. However, at the moment, you can find me skiing on Cypress Mountain or finding new dessert spots in the lower mainland. </p>
+                <p>I love using visuals and prototypes to communicate ideas, and I believe that physical products are a universal language that everybody can understand.  </p>
+                <p>At the moment, I am pursuing my undergraduate degree in Interactive Arts and Technology at Simon Fraser University with a concentration in design. </p>
+                <p>While attending Simon Fraser University, I have built strong skills in design, including HTML/CSS/JavaScript, as well as experience in the Adobe Suite. </p>
                 <a class="button" href="../html/projects/project-page.html">Check out my projects!</a>
+                <div class="bottom-border"></div>
             </div>
-        </div>
+        </div>        
         <div class="style-container">
             <div class="center" id="no-decoration">
                 <img src="../images/me.png" alt="random image that acts as a link">
             </div>
         </div>
+        <div class="banner-block">
+            <div class="style-container">
+                <div class="center">
+                    <h3>Skills</h3>
+                <div class="bottom-border-white"></div>
+                    <br>
+                    <p>HTML/CSS/JavaScript</p>                  
+                    <p>Java</p>
+                    <p>Rhinoceros3D</p>
+                    <p>OnShape</p>
+                    <p>Arduino</p>
+                    <div class="bottom-border-white"></div>
+                    <h3>Adobe Suite</h3>
+                    <div class="bottom-border-white"></div>
+                    <br>
+                    <p>Photoshop</p>
+                    <p>After Effects</p>
+                    <p>Premier Pro</p>
+                    <p>Illustrator</p>
+                <div class="bottom-border-white"></div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <footer>
         <div class="footer-flex-item">
