--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../css/stylesheet.css">
     <link rel="stylesheet" href="../../css/hamburger.css">
     <link rel="stylesheet" href="../../css/animations.css">
+    <script defer src="../../SCRIPTS/script.js"></script>
 </head>
 <body>
   <header>
