mostly complted animations

--- a/html/projects/goggle.html
+++ b/html/projects/goggle.html
@@ -24,12 +24,25 @@
         <a href="../../html/home.html">ABOUT ME</a>
         <a href="../../html/contact.html">CONTACT</a>
     </nav>
+    <div class="down-arrow"></div>
 </header>
-
-    <div class="banner-block">
+<div class="banner-block" id="full-spread">
+  <div class="arrow-container">
+      <div class="center">
+          <h2>VR Goggles for Seasonal Depression</h2>
+          <div class="bottom-border-white"></div><br>
+          <a href="../../images/336.png" target="_blank"><img src="../../images/336.png" alt="random image that acts as a link"></a>
+          <br><br>
+          <p>Scroll Down</p>
+          <a href="#contentstart" class="arrow down">Down</a>
+      </div>
+  </div>
+</div>
+<section class="container">
+    <div class="banner-block" id="contentstart">
         <div class="style-container">
             <div class="center">
-              <h2>VR Goggles</h2>
+              <h2>Industrial Design</h2>
               <div class="bottom-border-white"></div>
               <h3>Team</h3>
                   <div class="bottom-border-white"></div>
@@ -158,7 +171,7 @@
             </a>
           </div>
       </div>
-
+</section>
     <footer>
         <div class="footer-flex-item">
             <h3>Contact Me</h3>
