--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -25,11 +25,23 @@
             <a href="../../html/contact.html">CONTACT</a>
         </nav>
     </header>
+        <div class="banner-block" id="full-spread">
+            <div class="arrow-container">
+                <div class="center">
+                    <h2>Pavilion In A Park</h2>
+                    <div class="bottom-border-white"></div><br>
+                    <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                    <br><br>
+                    <p>Scroll Down</p>
+                    <a href="#contentstart" class="arrow down">Down</a>
+                </div>
+            </div>
+        </div>
     <section class="container">
-        <div class="banner-block">
+        <div class="banner-block" id="contentstart">
             <div class="style-container">
                 <div class="center" >
-                    <h2>Pavilion In A Park</h2>
+                    <h2>Architectural Design</h2>
                     <div class="bottom-border-white"></div>
                     <h3>Team</h3>
                         <div class="bottom-border-white"></div>
