--- a/html/projects/chair.html
+++ b/html/projects/chair.html
@@ -25,11 +25,23 @@
         <a href="../../html/contact.html">CONTACT</a>
     </nav>
 </header>
-
-    <div class="banner-block">
+<div class="banner-block" id="full-spread">
+  <div class="arrow-container">
+      <div class="center">
+          <h2>This Chair is Not a Chair</h2>
+          <div class="bottom-border-white"></div><br>
+          <a href="../../images/233.png" target="_blank"><img src="../../images/233.png" alt="random image that acts as a link"></a>
+          <br><br>
+          <p>Scroll Down</p>
+          <a href="#contentstart" class="arrow down">Down</a>
+      </div>
+  </div>
+</div>
+<section class="container">
+    <div class="banner-block" id="contentstart">
         <div class="style-container">
           <div class="center" >
-            <h2>This Chair Is Not A Chair</h2>
+            <h2>Product Design</h2>
             <div class="bottom-border-white"></div>
             <h3>Team</h3>
                 <div class="bottom-border-white"></div>
@@ -141,7 +153,7 @@ Another challenge was how we needed to convey both the fact that the model is a 
             </a>
           </div>
       </div>
-
+</section>
     <footer>
         <div class="footer-flex-item">
             <h3>Contact Me</h3>
