style guide updated

--- a/html/projects/pavilion.html
+++ b/html/projects/pavilion.html
@@ -28,9 +28,9 @@
         <div class="banner-block" id="full-spread">
             <div class="arrow-container">
                 <div class="center">
-                    <h2>Pavilion In A Park</h2>
+                    <h1>Pavilion In A Park</h1>
                     <div class="bottom-border-white"></div><br>
-                    <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                    <!-- <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a> -->
                     <br><br>
                     <p>Scroll Down</p>
                     <a href="#contentstart" class="arrow down">Down</a>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="style-container">
                     <div class="center">
-                    <a href="../../images/pergola-ideate.png" target="_blank"><img src="../../images/pergola-ideate.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/pergola-ideate.png" target="_blank"><img src="../../images/pergola-ideate.png" alt="random image that acts as a link"></a>
                 <div class="bottom-border"></div><br>
                 </div>
                 </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="style-container">
                     <div class="center">
-                    <a href="../../images/pavilion.png" target="_blank"><img src="../../images/pavilion.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/pavilion.png" target="_blank"><img src="../../images/pavilion.png" alt="random image that acts as a link"></a>
                 <div class="bottom-border"></div><br>
                 </div>
                 </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="style-container">
                 <div class="center">
-                    <a href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
+                    <a class="zoom" href="../../images/233-pav.png" target="_blank"><img src="../../images/233-pav.png" alt="random image that acts as a link"></a>
                 <div class="bottom-border-white"></div>
                 </div>
             </div>
@@ -131,7 +131,9 @@
         </div>
 
         <div class="style-container">
-            <h2>Check out my projects!</h2>
+            <div class="center">
+                <h2>Check out my projects!</h2>
+            </div>
         </div>
         <div class="style-container">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
