--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/animations.css">
+    <script defer src="/SCRIPTS/script.js"></script>
 </head>
 <body>
 <section class="guide">
@@ -23,11 +24,11 @@
             <a href="html/home.html">Website</a>
         </nav>
     </header>
-    <div class="style-main-body">
+    <!-- <div class="style-main-body"> -->
         <div class="banner">
             <h1>Calvin Lin P3: Portfolio Style Guide</h1>
         </div>
-    </div>
+    <!-- </div> -->
         <section id="general-elements">
             <div class="style-container">
                 <div class="style-element">
@@ -57,7 +58,7 @@
                 </div>
             </div>
             <div class="bottom-border-white"></div>
-
+            </div>
             <div class="style-container">
                 <div class="style-element">
                     <h3>In text link</h3>
@@ -140,7 +141,7 @@
                     </div>
                     <div class="style-element">
                             <h4>Rendered Element</h4>
-                            <a href="#"><img src="images/233.png" alt="random image that acts as a link"></a>
+                            <a class="zoom" href="#"><img src="images/233.png" alt="random image that acts as a link"></a>
                         </div>
                     </div>
                 </div>
